# pba-ink-hackathon

./: .gitignore  Cargo.toml  README.MD  lib.rs
dextr/backend/: package.json  pnpm-lock.yaml
dextr/backend/src/: app.controller.ts  app.module.ts  main.ts
dextr/backend/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts  faucet.dto.ts
dextr/backend/src/blockchain/: block-data-extractor.service.ts  block-price.service.ts  block-scanner.service.ts  blockchain-simulator.service.ts  blockchain.module.ts
dextr/backend/src/dex/: dex.controller.ts  dex.module.ts  dex.service.ts
dextr/backend/src/interfaces/: blockchain.interface.ts
dextr/backend/src/liquidity/: liquidity.controller.ts  liquidity.module.ts  liquidity.service.ts
dextr/backend/src/liquidity/dto/: add-liquidity.dto.ts
dextr/backend/src/oracle/: oracle.controller.ts  oracle.module.ts  oracle.service.ts
dextr/backend/src/orders/: orders.controller.ts  orders.module.ts  orders.service.ts
dextr/frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
dextr/frontend/src/: App.tsx  index.css
dextr/frontend/src/components/custom/: CustomDropdown.tsx  Header.tsx
dextr/frontend/src/components/custom/swap/: Swap.tsx
dextr/frontend/src/components/custom/trade/: AllPairs.tsx  (+2 more)
dextr/frontend/src/components/ui/: select.tsx
dextr/frontend/src/lib/: constants.ts  shortenAddress.ts
dextr/frontend/src/pages/: Faucet.tsx  ManageLiquidity.tsx  Trade.tsx
dextr/frontend/src/services/: api.ts  polkadotWallet.ts
dextr/frontend/src/stores/: useSwapStore.ts  walletStore.ts
