[package]
name = "dextr_ink_contract"
version = "0.1.0"
authors = ["Yash Sharma <iamyxsh@gmail.com>"]
edition = "2024"

[dependencies]
ink = { version = "5.1.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
